Dark mode source preorder fix

--- a/styles/BookSeriesDO.less
+++ b/styles/BookSeriesDO.less
@@ -809,6 +809,7 @@
 			.content {
 				background: #4a4a4a;
 			}
+			&[data-status-source="3"] .content,
 			&[data-status="3"] .content { //Preorder
 				background: #27b469;
 			}
